--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site responsivo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -21,9 +23,7 @@
 
         <header>
 
-            <img src="img/Logo.png" alt=""> 
-
-            <a href="#" class="login">Login</a>
+            <img src="img/Logo.png" alt="" class="logo">
 
         </header>
 
@@ -31,89 +31,25 @@
 
             <div class="main-box">
 
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
+                <a href="#"><img src="img/LavandoDinheiro.png" alt="Serviço lando o dinheiro"></a>
 
             </div>
 
             <div class="main-box">
 
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
+                <a href="#"><img src="img/FraudandoSuaFinança.png" alt="Serviço Fraudando Sua Finança"></a>
 
             </div>
 
             <div class="main-box">
 
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
+                <a href="#"><img src="img/Semimposto.png" alt="Serviço Fraudando Sua Finança"></a>
 
             </div>
 
             <div class="main-box">
 
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
-
-            </div>
-
-            <div class="main-box">
-
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
-
-            </div>
-
-            <div class="main-box">
-
-                <div class="box">
-
-                    <h1 class="title">Item</h1>
-                    <p>Corredor</p>
-
-                </div>
-
-            </div>
-
-            <div class="main-box">
-
-                <div class="box">
-
-                    <h1 class="title">Lugares</h1>
-                    <p>Em breve</p>
-
-                </div>
-
-            </div>
-
-            <div class="main-box">
-
-                <div class="box">
-
-                    <h1 class="title">Sorteios</h1>
-                    <p>Participe e ganhe</p>
-
-                </div>
+                <a href="#"><img src="img/corrupção.png" alt="Serviço Fraudando Sua Finança"></a>
 
             </div>
 
@@ -121,7 +57,7 @@
 
         <form>
 
-            <label>Cadestre seu e-mail para receber um desconto de ate 10R$ em sua primeira compra!</label>
+            <label>Cadestre seu e-mail para receber um bonus de ate 10R$ em seu primeiro pacote!</label>
 
             <div>
 
@@ -141,7 +77,6 @@
             <h1 class="title">Sobre nós</h1>
 
             <ul>
-                <li><a href="#">Lugares (em breve)</a></li>
                 <li><a href="#">Privacidade</a></li>
                 <li><a href="#">Termos</a></li>
             </ul>
@@ -156,6 +91,7 @@
         </div>
 
     </footer>
-    
+
 </body>
+
 </html>
