--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <img src="img/Logo.png" alt="" class="logo">
 
         </header>
-
+<br>
+        <h1 id="title">
+            Serviços
+        </h1>
+<hr>
         <main>
 
             <div class="main-box">
